<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cyan_color"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:text="@string/my_nanodegree_apps"
            android:textSize="24sp" />

        <Button
            android:id="@+id/spotify_streamer_button"
            style="@style/MyAppPortfolioTheme.Button"
            android:layout_below="@+id/title_text_view"
            android:layout_centerHorizontal="true"
            android:text="@string/spotify_streamer" />

        <Button
            android:id="@+id/football_scores_button"
            style="@style/MyAppPortfolioTheme.Button"
            android:layout_below="@+id/spotify_streamer_button"
            android:layout_centerHorizontal="true"
            android:text="@string/football_scores" />

        <Button
            android:id="@+id/library_app_button"
            style="@style/MyAppPortfolioTheme.Button"
            android:layout_below="@+id/football_scores_button"
            android:layout_centerHorizontal="true"
            android:text="@string/library_app" />

        <Button
            android:id="@+id/build_it_bigger_button"
            style="@style/MyAppPortfolioTheme.Button"
            android:layout_below="@+id/library_app_button"
            android:layout_centerHorizontal="true"
            android:text="@string/build_it_bigger" />

        <Button
            android:id="@+id/xyz_reader_button"
            style="@style/MyAppPortfolioTheme.Button"
            android:layout_below="@+id/build_it_bigger_button"
            android:layout_centerHorizontal="true"
            android:text="@string/xyz_reader" />

        <Button
            android:id="@+id/capstone_button"
            style="@style/MyAppPortfolioTheme.Button"
            android:layout_below="@+id/xyz_reader_button"
            android:layout_centerHorizontal="true"
            android:text="@string/capstone"
            android:textColor="@android:color/white" />

    </RelativeLayout>

</ScrollView>
